add contacts to task

--- a/addTask.html
+++ b/addTask.html
@@ -105,12 +105,12 @@
                 </div>
                 <div class="new_category_colors row-center">
                     <div class="new_category_select_color row-center">
-                        <span class="new_category_circle" style="background: #8AA4FF"></span>
-                        <span class="new_category_circle" style="background: #FF0000"></span>
-                        <span class="new_category_circle" style="background: #2AD300"></span>
-                        <span class="new_category_circle" style="background: #FF8A00"></span>
-                        <span class="new_category_circle" style="background: #E200BE"></span>
-                        <span class="new_category_circle" style="background: #0038FF"></span>
+                        <button class="new_category_circle" style="background: #8AA4FF"></button>
+                        <button class="new_category_circle" style="background: #FF0000"></button>
+                        <button class="new_category_circle" style="background: #2AD300"></button>
+                        <button class="new_category_circle" style="background: #FF8A00"></button>
+                        <button class="new_category_circle" style="background: #E200BE"></button>
+                        <button class="new_category_circle" style="background: #0038FF"></button>
                     </div>
                 </div>
             </div>
