--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <title>Join</title>
     <link rel="icon" type="image/icon" href="assets/img/logo_join_white.svg" />
 
-    <script src="assets/js/login-signup.js"></script>
-    <script src="assets/js/forgotPassword.js"></script>
-    <script src="assets/js/script.js"></script>
+
     <script src="assets/js/mini_backend.js"></script>
-    <script src="assets/js/summary.js"></script>
+    <!-- <script src="assets/js/summary.js"></script> -->
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
     </script>
@@ -51,7 +49,8 @@
             <div class="user_container column-flex-start">
                 <div class="user_mail column-flex-start">
                     <div class="inputs login_input_mail row-center">
-                        <input class="input_mail font400" type="text" placeholder="Email" required id="newUserEmail" onclick="writeEmail()">
+                        <input class="input_mail font400" type="text" placeholder="Email" required id="newUserEmail"
+                            onclick="writeEmail()">
                         <img class="login_input_img" src="assets/img/mail.svg" alt="">
                     </div>
                     <a class="wrong_password font400 d-none" id="wrongEmail">User not found</a>
@@ -60,8 +59,10 @@
                     <div class="inputs login_input_password row-center">
                         <input required type="password" minlength="6" class="input_password font400"
                             placeholder="Password" required id="newUserPassword">
-                            <a class="password_try_again font400 d-none" id="tryAgain" onclick="writePassword()">Ups! Try again</a>
-                        <img class="login_input_img" src="assets/img/locker.svg" id="password_icon" onclick="showPassword()">
+                        <a class="password_try_again font400 d-none" id="tryAgain" onclick="writePassword()">Ups! Try
+                            again</a>
+                        <img class="login_input_img" src="assets/img/locker.svg" id="password_icon"
+                            onclick="showPassword()">
                     </div>
                     <a class="wrong_password font400 d-none" id="wrongPassword">Wrong Password</a>
                 </div>
@@ -74,7 +75,7 @@
                 <a class="login_forgot_password font400" onclick="showForgotPassword()">Forgot my password</a>
             </div>
             <div class="login_buttons row-center-flexstart">
-                <button class="login_button_cont row-center-center" >
+                <button class="login_button_cont row-center-center">
                     <a class="login_button font400">Log in</a>
                 </button>
                 <button class="guest_login_button_cont row-center-center" onclick="greetGuest()">
@@ -88,7 +89,7 @@
         <div class="login_logo_join_blue">
             <img src="assets/img/logo_join_white.svg">
         </div>
-        
+
         <!-- forgot Password window-->
         <div class="forgot_passw_container column-center d-none" id="container_forgot_password">
             <div class="blue_arrow" onclick="showLoginSite()">
@@ -103,7 +104,7 @@
                 to reset your password.</a>
             <div class="user_mail column-flex-start">
                 <div class="inputs login_input_mail row-center">
-                    <input class="input_mail" type="text" placeholder="Email">
+                    <input class="input_mail" type="email" placeholder="Email" id="emailForNewPassword">
                     <img class="login_input_img" src="assets/img/mail.svg" alt="">
                 </div>
             </div>
@@ -132,10 +133,11 @@
             <a class="reset_text_parraf font400">Change your account password here</a>
             <div class="forgot_passwords column-flex-start">
                 <div class="inputs login_input_mail row-center">
-                    <input class="input_mail" type="password" minlength="6" placeholder="New password">
+                    <input class="input_mail" type="password" minlength="6" placeholder="New password" id="newPassword">
                 </div>
                 <div class="inputs login_input_mail row-center">
-                    <input class="input_mail" type="password" minlength="6" placeholder="Confirm password">
+                    <input class="input_mail" type="password" minlength="6" placeholder="Confirm password"
+                        id="confirmPassword">
                 </div>
             </div>
             <div class="padding_top35 login_buttons row-center-flexstart ">
@@ -149,6 +151,10 @@
             <a class="font_pop_up">You reset your password</a>
         </div>
     </div>
+
+    <script src="assets/js/login-signup.js"></script>
+    <!-- <script src="assets/js/forgotPassword.js"></script> -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
