--- a/addTask.html
+++ b/addTask.html
@@ -83,14 +83,14 @@
                             <a class="add_task_subtitle font400">New category</a>
                         </div>
                         <div class="new_category_container" id="newCategoryContainer"></div>
-                <!--    <div class="contacts_choose_cont row-center">
+                        <!--    <div class="contacts_choose_cont row-center">
                             <a class="add_task_subtitle font400">Sales</a>
                             <span class="category_circle_color color_sales"></span>
                         </div>
                         <div class="contacts_choose_cont row-center">
                             <a class="add_task_subtitle font400">Backoffice</a>
                             <span class="category_circle_color color_backoffice"></span>
-                        </div>-->  
+                        </div>-->
                     </div>
                 </div>
             </div>
@@ -115,8 +115,8 @@
             </div>
             <div class="add_task_description_cont column-flex-start">
                 <a class="add_task_titles font400">Description</a>
-                <textarea class="add_task_descript_input row-flexstart font400"
-                    placeholder="Enter a Description" id="addTaskDescription" onclick="writeDescription()"></textarea>
+                <textarea class="add_task_descript_input row-flexstart font400" placeholder="Enter a Description"
+                    id="addTaskDescription" onclick="writeDescription()"></textarea>
                 <a class="field_required" id="descriptionRequired">This field is required</a>
             </div>
             <div class="add_task_subtasks_cont column-flex-start">
