board and summary

--- a/summary.html
+++ b/summary.html
@@ -40,7 +40,7 @@
                     <div class="summary_left_urgent column-center-center">
                         <div class="summary_urgent_up row-center-center">
                             <img src="assets/img/blueClock.svg" class="urgent_clock_img">
-                            <a class="urgent_number font400">0</a>
+                            <a class="urgent_number font400" id="summaryTasksUrgent">0</a>
                         </div>
                         <a class="summary_urgent_text font400">Tasks Urgent</a>
                     </div>
