--- a/board.html
+++ b/board.html
@@ -23,6 +23,7 @@
     <script src="assets/js/mini_backend.js"></script>
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/addTask.js"></script>
+    <script src="assets/js/contacts.js"></script>
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
     </script>
@@ -58,28 +59,32 @@
                     <a class="column_tasks_text font400">To do</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                <div class="column_for_tasks" id="todoColumn" ondrop="moveTo('todo')" ondragover="allowDrop(event)"></div>
+                <div class="column_for_tasks" id="todoColumn" ondrop="moveTo('todo')" ondragover="allowDrop(event)">
+                </div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">In progress</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                <div class="column_for_tasks" id="InProgressColumn" ondrop="moveTo('progress')" ondragover="allowDrop(event)"></div>
+                <div class="column_for_tasks" id="InProgressColumn" ondrop="moveTo('progress')"
+                    ondragover="allowDrop(event)"></div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Await feedback</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                <div class="column_for_tasks" id="feedbackColumn" ondrop="moveTo('feedback')" ondragover="allowDrop(event)"></div>
+                <div class="column_for_tasks" id="feedbackColumn" ondrop="moveTo('feedback')"
+                    ondragover="allowDrop(event)"></div>
             </div>
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Done</a>
                     <img src="assets/img/plusbutton.svg" class="column_task_plus">
                 </div>
-                <div class="column_for_tasks" id="DoneColumn" ondrop="moveTo('done')" ondragover="allowDrop(event)"></div>
+                <div class="column_for_tasks" id="DoneColumn" ondrop="moveTo('done')" ondragover="allowDrop(event)">
+                </div>
             </div>
         </div>
     </div>
