summary and find task

--- a/board.html
+++ b/board.html
@@ -40,7 +40,7 @@
             <div class="board_head_findTask row-flexstart">
                 <div class="board_head_findT row-center">
                     <div class="find_task_head row-spacebet-center">
-                        <input class="find_task_input row-center-center font400" placeholder="Find Task">
+                        <input class="find_task_input row-center-center font400" placeholder="Find Task" id="findTaskInput">
                         <div class="find_task_imgs row-center">
                             <img src="assets/img/grauLine.svg">
                             <img src="assets/img/lupe.svg" class="find_task_img">
