--- a/summary.html
+++ b/summary.html
@@ -63,7 +63,7 @@
                     <div class="summary_right_cont column-center-center">
                         <div class="summary_cont_task row-center">
                             <img src="assets/img/Board.svg" class="summary_task_img">
-                            <a class="summary_task_number font400">0</a>
+                            <a class="summary_task_number font400" id="summaryTodoCount">0</a>
                         </div>
                         <a class="summary_cont_tasktodo">Tasks To-do</a>
                     </div>
@@ -74,7 +74,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskBoard.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">0</a>
+                            <a class="summary_progress_number font400" id="summaryTotalCount">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Task in Board</a>
                     </div>
@@ -83,7 +83,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskProgress.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">0</a>
+                            <a class="summary_progress_number font400" id="summaryProgressCount">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Task in Progress</a>
                     </div>
@@ -92,7 +92,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskFeedback.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">0</a>
+                            <a class="summary_progress_number font400" id="summaryFeedbackCount">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Awaiting Feedback</a>
                     </div>
@@ -101,7 +101,7 @@
                     <div class="summary_cont_tasks column-center-center">
                         <div class="summary_tasks_progress row-center">
                             <img src="assets/img/taskDone.svg" class="summary_progess_img">
-                            <a class="summary_progress_number font400">0</a>
+                            <a class="summary_progress_number font400" id="summaryDoneCount">0</a>
                         </div>
                         <a class="summary_tasks_text font400">Tasks Done</a>
                     </div>
