responsive login-header-menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body onload="init()">
     <!-- init logo-->
     <div class="logo_init" id="logo_init">
-        <img id="logo_init2" src="assets/img/logo_init.svg">
+        <img id="logo_init2" class="logo_init_size" src="assets/img/logo_init.svg">
     </div>
     <!-- init log-in-->
     <div class="login column-center d-none" id="login_site">
@@ -87,7 +87,7 @@
     <!-- init sign-up-->
     <div class="sign_up_cont column-center d-none" id="sign_up_site">
         <div class="login_logo_join_blue">
-            <img src="assets/img/logo_join_white.svg">
+            <img class="login_logo_blue_img" src="assets/img/logo_join_white.svg">
         </div>
 
         <!-- forgot Password window-->
