--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 
     <div class="sign_up_cont column-center" id="sign_up_site">
         <div class="login_logo_join_blue">
-            <img src="assets/img/logo_join_white.svg">
+            <img class="login_logo_blue_img" src="assets/img/logo_join_white.svg">
         </div>
         <!-- Sign up window-->
         <div class="login_container column-center" id="sign_up_container">
