--- a/summary.html
+++ b/summary.html
@@ -28,13 +28,13 @@
 <body onload="initSummary()">
     <div w3-include-html="assets/templates/menu.html"></div>
     <div class="summary_general_cont center-center">
-        <div class="container_summary column-center">
+        <div class="container_summary column-center" id="containerSummary">
             <div class="summary_head row-center ">
                 <a class="summary_morning font400" id="greetText"></a>
-                <a class="summary_user font400" id="summaryUser">Guest</a>
+                <a class="summary_user font400" id="summaryUser"></a>
             </div>
         </div>
-        <div class="summary_board column-center-center">
+        <div class="summary_board column-center-center" id="summaryBoard">
             <div class="summary_board_top row-center-flexstart">
                 <div class="summary_top_left row-center-center">
                     <div class="summary_left_urgent column-center-center">
