--- a/board.html
+++ b/board.html
@@ -35,12 +35,13 @@
     <div w3-include-html="assets/templates/menu.html"></div>
     <div w3-include-html="assets/templates/addTaskPopUp.html"></div>
 
-    <div class="board_container center-center">
+    <div class="board_container column-center-flexstart">
         <div class="board_head row-center">
             <div class="board_head_findTask row-flexstart">
                 <div class="board_head_findT row-center">
                     <div class="find_task_head row-spacebet-center">
-                        <input class="find_task_input row-center-center font400" placeholder="Find Task" id="findTaskInput">
+                        <input class="find_task_input row-center-center font400" placeholder="Find Task"
+                            id="findTaskInput">
                         <div class="find_task_imgs row-center">
                             <img src="assets/img/grauLine.svg">
                             <img src="assets/img/lupe.svg" class="find_task_img">
@@ -57,7 +58,7 @@
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">To do</a>
-                    <img src="assets/img/plusbutton.svg" class="column_task_plus">
+                    <img src="assets/img/plusbutton.svg" class="column_task_plus" onclick="createTaskPU()">
                 </div>
                 <div class="column_for_tasks" id="todoColumn" ondrop="moveTo('todo')" ondragover="allowDrop(event)">
                 </div>
@@ -65,7 +66,7 @@
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">In progress</a>
-                    <img src="assets/img/plusbutton.svg" class="column_task_plus">
+                    <img src="assets/img/plusbutton.svg" class="column_task_plus" onclick="createTaskPU()">
                 </div>
                 <div class="column_for_tasks" id="InProgressColumn" ondrop="moveTo('progress')"
                     ondragover="allowDrop(event)"></div>
@@ -73,7 +74,7 @@
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Await feedback</a>
-                    <img src="assets/img/plusbutton.svg" class="column_task_plus">
+                    <img src="assets/img/plusbutton.svg" class="column_task_plus" onclick="createTaskPU()">
                 </div>
                 <div class="column_for_tasks" id="feedbackColumn" ondrop="moveTo('feedback')"
                     ondragover="allowDrop(event)"></div>
@@ -81,7 +82,7 @@
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">Done</a>
-                    <img src="assets/img/plusbutton.svg" class="column_task_plus">
+                    <img src="assets/img/plusbutton.svg" class="column_task_plus" onclick="createTaskPU()">
                 </div>
                 <div class="column_for_tasks" id="DoneColumn" ondrop="moveTo('done')" ondragover="allowDrop(event)">
                 </div>
