--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <!-- reset Password window-->
         <div class="reset_passw_container column-center d-none" id="container_reset_password">
-            <div class="blue_arrow" onclick="showForgotThePassword()">
+            <div class="blue_arrow" onclick="showLogInSite()">
                 <img src="assets/img/blue_arrow.svg" class="blue_arrow_img">
             </div>
             <div class="forgot_title column-center">
