--- a/contacts.html
+++ b/contacts.html
@@ -58,6 +58,7 @@
     <script src="assets/js/script.js"></script>
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/board.js"></script>
+    <script src="assets/js/renderHTML.js"></script>
 </body>
 
 </html>
