--- a/board.html
+++ b/board.html
@@ -24,9 +24,11 @@
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/addTask.js"></script>
     <script src="assets/js/contacts.js"></script>
+    <script src="assets/js/renderHTML.js"></script>
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
 
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
