--- a/board.html
+++ b/board.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/board.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/viewTask.css">
 
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </div>
+        <div class="view_task_container column-center-center" id="ViewTaskContainer"></div>
     </div>
 </body>
 
