--- a/signup.html
+++ b/signup.html
@@ -12,12 +12,12 @@
     <link rel="icon" type="image/icon" href="assets/img/logo_join_white.svg" />
 
     <script src="assets/js/login-signup.js"></script>
-    <script src="assets/js/forgotPassword.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/mini_backend.js"></script>
     <script>
         setURL('https://juan-desantos.developerakademie.net/smallest_backend_ever');
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
 
     <link rel="stylesheet" href="assets/css/login-signup.css">
     <link rel="stylesheet" href="assets/css/miniPopups.css">
