--- a/contacts.html
+++ b/contacts.html
@@ -59,6 +59,7 @@
     <script src="assets/js/login-signup.js"></script>
     <script src="assets/js/board.js"></script>
     <script src="assets/js/renderHTML.js"></script>
+    <script src="assets/js/addTask.js"></script>
 </body>
 
 </html>
