--- a/help.html
+++ b/help.html
@@ -28,46 +28,113 @@
         <div class="legal_title_cont row-center-center">
             <a class="legal_title font400">Help</a>
         </div>
-        <div class="legal_info_cont column-flex-start">
-            <div class="legal_info_subcont column-flex-start">
-                <a class="legal_info_subtitle font400">What is Join?</a>
-                <a class="legal_info_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam distinctio
-                    asperiores id hic at
-                    laborum, necessitatibus autem praesentium reprehenderit consequuntur error totam temporibus eum. Non
-                    vitae obcaecati impedit exercitationem fuga!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, doloremque atque! Quia earum eos
-                    inventore ullam iure dignissimos quaerat excepturi saepe fugiat eveniet in, illo laborum sed ad
-                    eligendi error.
-                </a>
+        <div class="legal_info_subcont0 column-flex-start">
+            <span class="legal_info_text">Welcome to the help page for <a class="blue_etiquetes font400">Join</a>, your
+                guide to using our kanban project management tool. Here, we'll provide an overview of what <a
+                    class="blue_etiquetes font400">Join</a> is, how it can benefit you, and how to use it.
+            </span>
+        </div>
+        <div class="legal_info_container column-flex-start">
+            <div class="legal_info_subcont1 column-flex-start">
+                <a class="hep_info_subtitle font400">What is Join?</a>
+                <span class="legal_info_text"><a class="blue_etiquetes font400">Join</a> is a kanban-based project
+                    management tool designed and built by a group of
+                    dedicated students as part of their web development bootcamp at the Developer Akademie.
+
+                    Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+                    work-in-progress, and maximize efficiency (or flow). <a class="blue_etiquetes font400">Join</a>
+                    leverages the principles of kanban to help
+                    users manage their tasks and projects in an intuitive, visual interface.
+
+                    It is important to note that <a class="blue_etiquetes font400">Join</a> is designed as an
+                    educational
+                    exercise and is not intended for
+                    extensive business usage. While we strive to ensure the best possible user experience, we cannot
+                    guarantee consistent availability, reliability, accuracy, or other aspects of quality regarding <a
+                        class="blue_etiquetes font400">Join</a>.
+                </span>
             </div>
             <div class="help_info_subcont2 column-flex-start">
-                <a class="legal_info_subtitle font400">How to use it</a>
+                <a class="hep_info_subtitle font400">How to use it</a>
+                <span class="help_info_subtext font400">Here is a step-by-step guide on how to use <a
+                        class="blue_etiquetes font400">Join</a>:</span>
                 <ol class="help_info_text">
                     <div class="legal_info">
                         <a class="legal_text_number">1.</a>
-                        <a class="help_info_subtext font400"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
-                            autem, ipsum et repudiandae modi aliquam fuga ad consectetur cupiditate nam culpa optio
-                            vitae
-                            provident eveniet magnam, velit laboriosam ex deleniti.</a><br>
+                        <div class="legal_info_subcont column-flex-start">
+                            <a class="legal_info_subtitle font400">Exploring the Board</a>
+                            <span class="help_info_subtext font400">
+                                When you log in to <a class="blue_etiquetes font400">Join</a>, you'll find a default
+                                board.
+                                This board represents your project and
+                                contains four default lists: "To Do", "In Progress", “Await feedback” and
+                                "Done".</span><br>
+                        </div>
                     </div>
                     <div class="legal_info">
                         <a class="legal_text_number">2.</a>
-                        <a class="help_info_subtext font400"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
-                            autem, ipsum et repudiandae modi aliquam fuga ad consectetur cupiditate nam culpa optio
-                            vitae
-                            provident eveniet magnam, velit laboriosam ex deleniti.</a><br>
+                        <div class="legal_info_subcont column-flex-start">
+                            <a class="legal_info_subtitle font400">Creating Contacts</a>
+                            <span class="help_info_subtext font400">
+                                In <a class="blue_etiquetes font400">Join</a>, you can add contacts to collaborate on
+                                your
+                                projects. Go to the "Contacts" section,
+                                click on "New contact", and fill in the required information. Once added, these contacts
+                                can
+                                be assigned tasks and they can interact with the tasks on the board.</span><br>
+                        </div>
                     </div>
                     <div class="legal_info">
                         <a class="legal_text_number">3.</a>
-                        <a class="help_info_subtext font400"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
-                            autem, ipsum et repudiandae modi aliquam fuga ad consectetur cupiditate nam culpa optio
-                            vitae
-                            provident eveniet magnam, velit laboriosam ex deleniti.</a><br>
+                        <div class="legal_info_subcont column-flex-start">
+                            <a class="legal_info_subtitle font400">Adding Cards</a>
+                            <span class="help_info_subtext font400">
+                                Now that you've added your contacts, you can start adding cards. Cards represent
+                                individual
+                                tasks. Click the "+" button under the appropriate list to create a new card. Fill in the
+                                task details in the card, like task name, description, due date, assignees,
+                                etc.</span><br>
+                        </div>
                     </div>
-
-                    
+                    <div class="legal_info">
+                        <a class="legal_text_number">3.</a>
+                        <div class="legal_info_subcont column-flex-start">
+                            <a class="legal_info_subtitle font400">Moving Cards</a>
+                            <span class="help_info_subtext font400">
+                                As the task moves from one stage to another, you can reflect that on the board by
+                                dragging
+                                and dropping the card from one list to another.</span><br>
+                        </div>
+                    </div>
+                    <div class="legal_info">
+                        <a class="legal_text_number">3.</a>
+                        <div class="legal_info_subcont column-flex-start">
+                            <a class="legal_info_subtitle font400">Deleting Cards</a>
+                            <span class="help_info_subtext font400">
+                                Once a task is completed, you can either move it to the "Done" list or delete it.
+                                Deleting a
+                                card will permanently remove it from the board. Please exercise caution when deleting
+                                cards,
+                                as this action is irreversible.
+                                <br><br>
+                                Remember that using <a class="blue_etiquetes font400">Join</a> effectively requires
+                                consistent updates from you and your team to
+                                ensure the board reflects the current state of your project.
+                                <br><br>
+                                Have more questions about <a class="blue_etiquetes font400">Join</a>? Feel free to
+                                contact
+                                us at juanj.dsg9@gmail.com. We're here
+                                to help you!
+                            </span><br>
+                        </div>
+                    </div>
+                    <div class="legal_info">
+                        <a class="legal_info_subtitle_1 font400">Enjoy using Join!
+                        </a>
+                    </div>
             </div>
         </div>
+    </div>
     </div>
 
 </body>
