--- a/legalNotice.html
+++ b/legalNotice.html
@@ -28,18 +28,93 @@
         </div>
         <div class="legal_info_cont column-flex-start">
             <div class="legal_info_subcont column-flex-start">
-                <a class="legal_info_subtitle font400">Subtitle</a>
-                <a class="legal_info_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam distinctio asperiores id hic at
-                    laborum, necessitatibus autem praesentium reprehenderit consequuntur error totam temporibus eum. Non
-                    vitae obcaecati impedit exercitationem fuga!
+                <a class="legal_info_subtitle_1 font400">Imprint</a>
+                <div class="legal_info_text">
+                    <ul>
+                        <li>Juan de Santos</li>
+                        <li>Markgrafenstr.</li>
+                        <li>12105, Berlin</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Exploring the Board</a>
+                <a class="legal_info_text">juanj.dsg9@gmail.com
                 </a>
             </div>
             <div class="legal_info_subcont column-flex-start">
-                <a class="legal_info_subtitle font400">Subtitle</a>
-                <a class="legal_info_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam distinctio asperiores id hic at
-                    laborum, necessitatibus autem praesentium reprehenderit consequuntur error totam temporibus eum. Non
-                    vitae obcaecati impedit exercitationem fuga!
-                </a>
+                <a class="legal_info_subtitle font400">Acceptance of terms</a>
+                <span class="legal_info_text">By accessing and using <a class="blue_etiquetes font400"><a
+                            class="blue_etiquetes font400">Join</a></a>
+                    (Product),
+                    you acknowledge and agree to the
+                    following terms and conditions, and any policies, guidelines, or amendments thereto that may be
+                    presented to you from time to time. We, the listed students, may update or change the terms and
+                    conditions from time to time without notice.
+                </span>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Scope and ownership of the product</a>
+                <span class="legal_info_text"><a class="blue_etiquetes font400">Join</a> has been developed as part of a
+                    student group project in a web
+                    development bootcamp at the <a class="blue_etiquetes font400">Developer Akademie GmbH</a>. It has an
+                    educational purpose and is not
+                    intended for extensive personal & business usage. As such, we cannot guarantee consistent
+                    availability, reliability, accuracy, or any other aspect of quality regarding this Product.
+                    <br>
+                    <br>
+                    The design of <a class="blue_etiquetes font400">Join</a> is owned by the <a
+                        class="blue_etiquetes font400">Developer Akademie GmbH</a>.
+                    Unauthorized use, reproduction,
+                    modification, distribution, or replication of the design is strictly prohibited.
+                </span>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Proprietary rights</a>
+                <span class="legal_info_text">Aside from the design owned by <a class="blue_etiquetes font400">Developer
+                        Akademie GmbH</a>, we, the listed
+                    students, retain all proprietary rights in <a class="blue_etiquetes font400">Join</a>, including any
+                    associated copyrighted material,
+                    trademarks, and other proprietary information.
+                </span>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Use of the product</a>
+                <span class="legal_info_text"><a class="blue_etiquetes font400">Join</a> is intended to be used for
+                    lawful purposes only, in accordance with
+                    all
+                    applicable laws and regulations. Any use of <a class="blue_etiquetes font400">Join</a> for illegal
+                    activities, or to harass, harm,
+                    threaten, or intimidate another person, is strictly prohibited. You are solely responsible for your
+                    interactions with other users of <a class="blue_etiquetes font400">Join</a>.
+                </span>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Disclaimer of warranties and limitation of liability</a>
+                <span class="legal_info_text"><a class="blue_etiquetes font400">Join</a> is provided "as is" without
+                    warranty of any kind, whether express or
+                    implied, including but not limited to the implied warranties of merchantability, fitness for a
+                    particular purpose, and non-infringement. In no event will we, the listed students, or the Developer
+                    Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary
+                    damages, including but not limited to, damages for loss of profits, goodwill, use, data, or other
+                    intangible losses, even if we have been advised of the possibility of such damages, arising out of
+                    or in connection with the use or performance of <a class="blue_etiquetes font400">Join</a>.
+                </span>
+            </div>
+            <div class="legal_info_subcont column-flex-start">
+                <a class="legal_info_subtitle font400">Indemnity</a>
+                <span class="legal_info_text">You agree to indemnify, defend and hold harmless us, the listed students,
+                    the <a class="blue_etiquetes font400">Developer Akademie GmbH</a>,
+                    and our affiliates, partners, officers, directors, agents, and employees, from and against any
+                    claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or
+                    relating to your use of Join and/or your breach of this Legal Notice.
+                    <br>
+                    <br>
+                    For any questions or notices, please contact us at juanj.dsg9@gmail.com.
+                    <br>
+                    <br>
+                    Date: Ausgust 30, 2023
+                </span>
             </div>
         </div>
     </div>
