--- a/summary.html
+++ b/summary.html
@@ -27,9 +27,9 @@
 
 <body onload="initSummary()">
     <div w3-include-html="assets/templates/menu.html"></div>
-    <div class="summary_general_cont center-center">
+    <div class="summary_general_cont column-center">
         <div class="container_summary column-center" id="containerSummary">
-            <div class="summary_head row-center ">
+            <div class="summary_head  ">
                 <a class="summary_morning font400" id="greetText"></a>
                 <a class="summary_user font400" id="summaryUser"></a>
             </div>
