--- a/privacy.html
+++ b/privacy.html
@@ -9,17 +9,21 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
         rel="stylesheet" />
+    <link rel="icon" type="image/icon" href="assets/img/logo_join_white.svg" />
 
     <link rel="stylesheet" href="assets/css/models.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/legal_help.css">
+    <link rel="stylesheet" href="assets/css/privacy.css">
+    <link rel="stylesheet" href="assets/css/miniPopups.css">
 
+    <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
     <div w3-include-html="assets/templates/header.html"></div>
 </head>
 
-<body onload="includeHTML();">
+<body onload="includeHTML()">
     <div w3-include-html="assets/templates/menu.html"></div>
     <div class="legal_container column-flex-start">
         <img src="assets/img/blue_arrow.svg" class="legal_help_blue_arrow" onclick="openSummary()">
