--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
     </div>
 
     <script src="assets/js/login-signup.js"></script>
-    <!-- <script src="assets/js/forgotPassword.js"></script> -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/renderHTML.js"></script>
+
 </body>
 
 </html>
