some changes responsive, design

--- a/board.html
+++ b/board.html
@@ -38,7 +38,7 @@
     <div w3-include-html="assets/templates/menu.html"></div>
     <div w3-include-html="assets/templates/addTaskPopUp.html"></div>
 
-    <div class="board_container column-center-flexstart">
+    <div class="board_container column-flex-start">
         <div class="board_head row-center">
             <div class="board_head_findTask row-flexstart">
                 <div class="board_head_findT row-center">
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="board_columns_container row-center-flexstart">
+        <div class="board_columns_container row-flexstart">
             <div class="board_columns_column column-center">
                 <div class="board_column_tasks row-spacebet-center">
                     <a class="column_tasks_text font400">To do</a>
