--- a/summary.html
+++ b/summary.html
@@ -114,6 +114,7 @@
     <script src="assets/js/header.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/login-signup.js"></script>
+    <script src="assets/js/board.js"></script>
 </body>
 
 </html>
